pkg/plugins/runtime/gateway/testdata/03-gateway-listener.yaml
Clusters:
  Resources:
    tracing:jaeger-collector:
      altStatName: tracing_jaeger-collector
      circuitBreakers:
        thresholds:
        - trackRemaining: true
      connectTimeout: 5s
      dnsLookupFamily: V4_ONLY
      loadAssignment:
        clusterName: tracing:jaeger-collector
        endpoints:
        - lbEndpoints:
          - endpoint:
              address:
                socketAddress:
                  address: jaeger-collector.kuma-tracing
                  portValue: 9411
      name: tracing:jaeger-collector
      type: STRICT_DNS
Endpoints:
  Resources: {}
Listeners:
  Resources:
    tracing-gateway:HTTP:8080:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 8080
      enableReusePort: true
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: envoy.filters.http.local_ratelimit
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                statPrefix: rate_limit
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: tracing-gateway:HTTP:8080:*
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            tracing:
              overallSampling:
                value: 100
              provider:
                name: envoy.tracers.zipkin
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                  collectorCluster: tracing:jaeger-collector
                  collectorEndpoint: /api/v2/spans
                  collectorEndpointVersion: HTTP_JSON
                  collectorHostname: jaeger-collector.kuma-tracing:9411
              spawnUpstreamSpan: true
            useRemoteAddress: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: tracing-gateway:HTTP:8080
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
Routes:
  Resources:
    tracing-gateway:HTTP:8080:*:
      ignorePortInHostMatching: true
      name: tracing-gateway:HTTP:8080:*
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - '*'
        name: '*'
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
Runtimes:
  Resources:
    gateway.listeners:
      layer: {}
      name: gateway.listeners
Secrets:
  Resources: {}
